==============================================================
1.0.1 [2022/01/31]
==============================================================
 - removed field prefix (mamba/goffy)
 - removed table name from functions (mamba/goffy)
 - usage of singular table names (mamba/goffy)
 - updated mail notification system (goffy)
 - added verification for registrations (goffy)
 - added js in account form (goffy)
 - modification of textblock usage (goffy)
 - added tablesorter (mamba)
 - added notify all participants (goffy)
 - added google maps (goffy)
 - added js for expand/collapse description (goffy)
 - added html support for notifications (goffy)
 - send no notifications to myself (goffy)

==============================================================
1.0.0 [2022/01/04 9:28:23]
==============================================================
 - Original release wgevents (Goffy - Wedega)