@@ -79,6 +79,7 @@ require_once __DIR__ . '/main.php';
 \define('_AM_WGEVENTS_CATEGORY_EDIT', 'Kategorie bearbeiten');
 // Elements of Category
 \define('_AM_WGEVENTS_CATEGORY_ID', 'Id');
+\define('_AM_WGEVENTS_CATEGORY_IDENTIFIER', 'Präfix Eindeutige Kennung');
 \define('_AM_WGEVENTS_CATEGORY_PID', 'übergeordnete Kategorie');
 \define('_AM_WGEVENTS_CATEGORY_NAME', 'Name');
 \define('_AM_WGEVENTS_CATEGORY_DESC', 'Beschreibung');
