@@ -9,6 +9,10 @@
     </div>
     <div class="wge-row1">
         <div class="row">
+            <div class="col-xs-12 col-sm-3 col-lg-2"><{$smarty.const._MA_WGEVENTS_EVENT_IDENTIFIER}>: </div>
+            <div class="col-xs-12 col-sm-9 col-lg-10"><{$event.identifier|default:''}></div>
+        </div>
+        <div class="row">
             <div class="col-xs-12 col-sm-3 col-lg-2"><{$smarty.const._MA_WGEVENTS_EVENT_DATEFROM}>: </div>
             <div class="col-xs-12 col-sm-9 col-lg-10"><{$event.datefrom_text}></div>
         </div>
